[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/godot_asset_loader/resource_downloader_screen.gd" id="1_sb5pe"]

[node name="ResourceDownloaderScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sb5pe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Resource Downloader"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SearchContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SearchLabel" type="Label" parent="VBoxContainer/SearchContainer"]
layout_mode = 2
text = "Search:"

[node name="SearchBox" type="LineEdit" parent="VBoxContainer/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search for assets by name or description"
clear_button_enabled = true

[node name="FilterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CategoryLabel" type="Label" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
text = "Category:"

[node name="CategoryFilter" type="OptionButton" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup_hide_on_item_selection = false
item_0/text = "All"
item_0/id = 0

[node name="TypeLabel" type="Label" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
text = "Type:"

[node name="TypeFilter" type="OptionButton" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup_hide_on_item_selection = false
item_0/text = "All"
item_0/id = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer/FilterContainer"]
layout_mode = 2
tooltip_text = "Configure Asset Loader Settings"
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsLabel" type="Label" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
text = "0 resources found"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResourcesGrid" type="GridContainer" parent="VBoxContainer/ContentContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RefreshButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Refresh"

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DownloadButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Download"